fixing a small layout issue

--- a/styles.css
+++ b/styles.css
@@ -53,7 +53,7 @@ body {
 .main {
   display: grid;
   grid-template-columns: repeat(5, 1fr);
-  grid-template-rows: repeat(3, 1fr);
+  grid-template-rows: repeat(2, 1fr);
   margin-top: 2rem;
   grid-gap: 1rem;
   color: var(--light);
@@ -62,7 +62,7 @@ body {
 .main .showcase {
   background: url("https://image.ibb.co/kYJK8x/showcase.jpg") top center/cover;
   grid-column: 1/5;
-  grid-row: 1/4;
+  grid-row: 1/3;
   overflow: hidden;
   padding: 0 2rem;
   display: flex;
